<resources>
    <string name="app_name">CryptocurrenciesViewer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list">List</string>
    <string name="details">Details</string>
    <string name="test_empty_fragment">test empty fragment</string>
    <string name="_1d">1D</string>
    <string name="_1w">1W</string>
    <string name="_1m">1M</string>
    <string name="_3m">3M</string>
    <string name="_6m">6M</string>
    <string name="_1y">1Y</string>
    <string name="max">MAX</string>
    <string name="percent_change_7d">Percent change 7d:</string>
    <string name="cryptoname">CryptoName</string>
    <string name="find">find your crypto</string>
    <string name="i_will_help_you_find">I will help you to find</string>
</resources>