<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/name_fragment"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/details"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        tools:background="@color/black"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@+id/name_fragment"
        app:layout_constraintBottom_toTopOf="@id/tab_layout">
    </androidx.viewpager2.widget.ViewPager2>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_height="30dp"
        tools:background="#FF9800"
        app:layout_constraintTop_toBottomOf="@id/view_pager2"
        app:layout_constraintBottom_toTopOf="@id/liner_chart_view">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1d" />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1w" />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1m" />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3m" />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6m" />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1y" />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max" />

    </com.google.android.material.tabs.TabLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/liner_chart_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        tools:background="@color/black">
    </com.github.mikephil.charting.charts.LineChart>

    <TextView
        android:id="@+id/graph_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Test"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/liner_chart_view"
        app:layout_constraintEnd_toEndOf="@+id/liner_chart_view"
        app:layout_constraintStart_toStartOf="@+id/liner_chart_view"
        app:layout_constraintTop_toTopOf="@+id/liner_chart_view"
        app:layout_constraintVertical_bias="0.05" />

    <ProgressBar
        android:id="@+id/load_progress"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/liner_chart_view"
        app:layout_constraintEnd_toEndOf="@+id/liner_chart_view"
        app:layout_constraintStart_toStartOf="@+id/liner_chart_view"
        app:layout_constraintTop_toTopOf="@id/liner_chart_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>